<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.5.13</version>
        <relativePath/>
        <!-- lookup parent from repository -->
    </parent>
    <groupId>com.guanshiyun</groupId>
    <artifactId>guanshiyun</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>ai-recommend-cloud</name>
    <description>ai-recommend-cloud</description>
    <packaging>pom</packaging>
    <modules>
        <module>gsy-ai-cloud</module>
<!--        <module>gsy-statistical-cloud</module>-->
        <module>gsy-system-cloud</module>
        <module>gsy-gateway-cloud</module>
        <module>gsy-goods-cloud</module>
<!--        <module>gsy-shopping-card-cloud</module>-->
        <module>gsy-general-api-cloud</module>
        <module>gsy-order-cloud</module>
<!--        <module>gsy-pay-cloud</module>-->
        <module>gsy-behavior-cloud</module>
        <module>gsy-upload-cloud</module>
    </modules>
    <url/>
    <licenses>
        <license/>
    </licenses>
    <developers>
        <developer/>
    </developers>
    <scm>
        <connection/>
        <developerConnection/>
        <tag/>
        <url/>
    </scm>
    <properties>
        <java.version>25</java.version>
        <project-version>2025.0.0.0</project-version>
        <spring-cloud.version>2025.0.0</spring-cloud.version>
<!--        <fastjson.version>2.0.61</fastjson.version>-->
        <snapshotName>0.0.1-SNAPSHOT</snapshotName>
        <r2dbc.mysql.version>1.4.1</r2dbc.mysql.version>
        <junit.version>4.13.2</junit.version>
        <hutool.version>5.8.44</hutool.version>
        <spring-ai.version>1.1.4</spring-ai.version>
        <spring-alibaba-ai.version>1.1.2.2</spring-alibaba-ai.version>
<!--        <mcp.version>0.17.0</mcp.version>-->
<!--        <mcp.webflux.version>0.8.0</mcp.webflux.version>-->
        <aliyun.core.version>4.7.8</aliyun.core.version>
        <gorse.version>0.5.0</gorse.version>
        <all.dash.version>2.22.14</all.dash.version>
        <common.version>2.1</common.version>
<!--        <reactive.feign.version>4.2.1</reactive.feign.version>-->
<!--        <jaxb.api.version>2.3.1</jaxb.api.version>-->
        <powerjob.version>5.1.2</powerjob.version>
    </properties>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>tech.powerjob</groupId>
                <artifactId>powerjob-worker-spring-boot-starter</artifactId>
                <version>${powerjob.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ongres.scram</groupId>
                <artifactId>common</artifactId>
                <version>${common.version}</version>
            </dependency>
            <dependency>
                <groupId>com.ongres.scram</groupId>
                <artifactId>client</artifactId>
                <version>${common.version}</version>
            </dependency>
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>dashscope-sdk-java</artifactId>
                <version>${all.dash.version}</version>
            </dependency>

            <!-- 编译期使用，运行时不需要 -->

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${project-version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.ai</groupId>
                <artifactId>spring-ai-bom</artifactId>
                <version>${spring-ai.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
<!--            <dependency>-->
<!--                <groupId>com.alibaba.fastjson2</groupId>-->
<!--                <artifactId>fastjson2</artifactId>-->
<!--                <version>${fastjson.version}</version>-->
<!--            </dependency>-->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>aliyun-spring-boot-dependencies</artifactId>
                <version>1.0.0</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud.ai</groupId>
                <artifactId>spring-ai-alibaba</artifactId>
                <version>${spring-alibaba-ai.version}</version>
                <type>pom</type>
                <scope>import</scope> <!-- 这里改成了 import -->
            </dependency>
            <dependency>
                <groupId>io.gorse</groupId>
                <artifactId>gorse-client</artifactId>
                <version>${gorse.version}</version>
            </dependency>
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>
            <dependency>
                <groupId>io.asyncer</groupId>
                <artifactId>r2dbc-mysql</artifactId>
                <version>${r2dbc.mysql.version}</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-webflux</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-mail</artifactId>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <configuration>
                    <excludes>
                        <exclude>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                        </exclude>
                    </excludes>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
